# qtcloud-auth

./: .gitmodules  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt
docs/: api-reference.md  dev-guide.md  user-guide.md
src/provider/: CHANGELOG.md  README.md  go.mod  go.sum  main.go
src/provider/api/: api_test.go  handler.go  middleware.go  oauth.go  response.go  sms.go  token.go
src/provider/auth/: jwt.go  jwt_test.go
src/provider/model/: role.go  role_test.go  user.go  user_test.go  verification_code.go
tests/: __init__.py  conftest.py  test_oauth.py
