[project]
name = "qtcloud-auth-tests"
version = "0.0.1"
description = "Integration tests for qtcloud-auth"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "pytest-httpx>=0.35",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests that require the service running (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
log_cli_level = "INFO"
